kubernetes-old/kube-system/kubernetes-dashboard/ingress.yaml
---
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: kubernetes-dashboard
  namespace: kube-system
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: basic-auth-kubernetes-dashboard
    nginx.ingress.kubernetes.io/auth-realm: "Authentication Required - Kubernetes Dashboard"
spec:
  tls:
  - hosts:
    - k8s.thuault.com
    secretName: kubernetes-dashboard-tls
  rules:
  - host: k8s.thuault.com
    http:
      paths:
      - path: /
        backend:
          serviceName: kubernetes-dashboard
          servicePort: 80
